cmake_minimum_required (VERSION 2.6)
PROJECT (BlockSnake)



INCLUDE_DIRECTORIES(./include)
AUX_SOURCE_DIRECTORY(src CPP_FILES)


ADD_EXECUTABLE(BlockSnake ${CPP_FILES})
ADD_DEFINITIONS( "-Wall -std=c++11 -O3" )


if(APPLE)
	FIND_LIBRARY(COCOA_LIBRARY Cocoa)
	FIND_PACKAGE(OpenGL REQUIRED)
	INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(BlockSnake ${COCOA_LIBRARY} ${OPENGL_LIBRARIES})
elseif(WIN32)

endif()