cmake_minimum_required (VERSION 2.6)
PROJECT (BlockSnake)



INCLUDE_DIRECTORIES(./Include)
AUX_SOURCE_DIRECTORY(src CPP_FILES)
ADD_EXECUTABLE(BlockSnake ${CPP_FILES})

ADD_DEFINITIONS( "-g -Wall -std=c++11  -O0" )


if(APPLE)
	FIND_LIBRARY(COCOA_LIBRARY Cocoa)
	FIND_PACKAGE(OpenGL REQUIRED)
	INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(${COCOA_LIBRARY} ${OPENGL_LIBRARIES})
elseif(WIN32)



else()
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(X11 REQUIRED)
find_package(GLEW REQUIRED)
if (GLEW_FOUND)
	find_package(Threads REQUIRED)
	INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
	TARGET_LINK_LIBRARIES(BlockSnake ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} ${X11_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
endif()


endif()
